--- a/WebPage/CanteenEvaluationSystem(CES)/mo/StyleForCES.css
+++ b/WebPage/CanteenEvaluationSystem(CES)/mo/StyleForCES.css
@@ -40,6 +40,7 @@ body {
     display: flex;
     align-items: center;
     gap: 10px;
+    margin-left: 20px;
 }
 
 .topbar-left img {
@@ -50,6 +51,7 @@ body {
     display: flex;
     align-items: center;
     gap: 20px;
+    margin-right: 20px;
 }
 
 .login-register {
